--- a/styles/index.less
+++ b/styles/index.less
@@ -55,13 +55,13 @@ a,input {
 
 .z-search-box .z-search {
 	flex: 1;
-	margin:0 3%;
+	padding:0 3%;
 	position: relative;
 }
 
 .z-search .icon-search {
 	position: absolute;
-	right: 8px;
+	right: 16px;
 	top: 8px;
 	width: 16px;
 	height: 16px;
