--- a/styles/index.less
+++ b/styles/index.less
@@ -43,7 +43,7 @@ a,input {
 	width: 100%;
 	display: flex;
 	align-items: center;
-	padding: 0 4%;
+	padding-left: 4%;
 	background-color: #FFF;
 }
  .z-search-box .z-logo {
@@ -55,7 +55,7 @@ a,input {
 
 .z-search-box .z-search {
 	flex: 1;
-	padding:0 3%;
+	padding-left: 3%;
 	position: relative;
 }
 
@@ -85,6 +85,14 @@ a,input {
     -webkit-tap-highlight-color: transparent;
     outline: none;
  }
+
+  .z-search-box .z-user-box {
+  	width: 44px;
+  	height: 100%;
+  	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  }
 
  .z-search-box .z-user {
  	width: 22px;
@@ -447,5 +455,6 @@ a,input {
 /*播放区块*/
 .z-play .z-play-box {
 	width: 100%;
+	height: 56.25%;
 	border: 0;
 }
