--- a/styles/index.less
+++ b/styles/index.less
@@ -457,4 +457,38 @@ a,input {
 	width: 100%;
 	height: 56.25%;
 	border: 0;
+	position: relative;
+}
+
+.z-play .z-play-box .z-video {
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.z-play .z-play-box .z-video-ad {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.z-play-full {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 1000;
+}
+
+.z-play-full .z-video {
+	width: 100%;
+	height: 100%;
+	border: 0;
 }
